--- a/app0624/adapterview/build.gradle
+++ b/app0624/adapterview/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.rgo0517.crud"
+        applicationId "com.rgo0517.adapterview"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
